--- a/landing.html
+++ b/landing.html
@@ -11,13 +11,13 @@
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   <script src="jquery-3.3.1.min.js"></script>
-  <script type="text/babel" src="./js/index.js"></script>
+  <script type="text/babel" src="./js/landing.js"></script>
 
 </head>
 
 <body>
-  <div id="root">
-
+  <div >
+    <button><a href="mainpage">jquery mainpage</a></button>
   </div>
 
   <script></script>
