--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <!--link to css file-->
-  <link rel="stylesheet" type="text/css" href="./css/index.css">
+  <link rel="stylesheet" type="text/css" href="./css/mainpage.css">
   <link href="https://fonts.googleapis.com/css?family=Boogaloo|Kalam|Neucha" rel="stylesheet">
   <title></title>
   <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-  <div id="root">
-
+  <div>
+    lets start again with jquery
+    
   </div>
 
   <script></script>
