came back to react

--- a/landing.html
+++ b/landing.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" type="text/css" href="./css/mainpage.css">
   <link href="https://fonts.googleapis.com/css?family=Boogaloo|Kalam|Neucha" rel="stylesheet">
   <title></title>
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/babel" src="./js/landing.js"></script>
 
 </head>
 
 <body>
-  <div >
-    <button><a href="mainpage">jquery mainpage</a></button>
+  <div id="root">
   </div>
 
   <script></script>
