--- a/mainpage.html
+++ b/mainpage.html
@@ -4,18 +4,20 @@
 <head>
   <meta charset="utf-8">
   <!--link to css file-->
-  <link rel="stylesheet" type="text/css" href="./css/mainpage.css">
+  <link rel="stylesheet" type="text/css" href="./css/hackathon.css">
   <link href="https://fonts.googleapis.com/css?family=Boogaloo|Kalam|Neucha" rel="stylesheet">
   <title></title>
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/babel" src="./js/mainpage.js"></script>
 
 </head>
 
 <body>
-  <div>
-    lets start again with jquery
-    
+  <div id="root">
+
   </div>
 
   <script></script>
