chatbot page css change

--- a/boto.html
+++ b/boto.html
@@ -19,14 +19,10 @@
 		<div class="chat-box shadowed">
 			<!-- CHAT HEADER -->
 			<div class="chat-window-header">
-				Chatbot
+				<span id="botheader">I am GearRoBot <img src="./images/frobot.png"/></span>
 				<span id="mute-btn" class="clickable" ></span>
 			</div>
 			<!-- BOTO PLACEHOLDER -->
-			<div class="orb-holder">
-				<img class="orb" src="./images/orb2.png">
-				<img id="emoji" src="./images/speaking.gif">
-			</div>
 			<!-- CHAT SCREEN -->
 			<div class="chat-screen">
 			</div>
